# papers-mcp

./: .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/openalex/src/: client.rs
crates/openalex/src/types/: publisher.rs  source.rs  topic.rs  work.rs
crates/papers/: AGENTS.md  CHANGES.md  Cargo.toml  README.md
crates/papers-cli/: AGENTS.md  Cargo.toml  README.md
crates/papers-cli/src/: cli.rs  format.rs  main.rs
crates/papers-cli/tests/: cli.rs  extract.rs
crates/papers-core/: AGENTS.md  CHANGES.md  CLAUDE.md  Cargo.toml  README.md
crates/papers-core/src/: api.rs  filter.rs  lib.rs  summary.rs  text.rs  zotero.rs
crates/papers-core/tests/: api.rs  filter.rs  text_cache.rs  zotero.rs
crates/papers-datalab/: AGENTS.md  Cargo.toml  api-spec.toml
crates/papers-datalab/src/: client.rs  error.rs  lib.rs  types.rs
crates/papers-mcp/: AGENTS.md  CHANGES.md  Cargo.toml  README.md
crates/papers-mcp/src/: main.rs  params.rs  server.rs
crates/papers-mcp/tests/: tools.rs
crates/papers-openalex/: AGENTS.md  Cargo.toml  README.md  api-spec.toml
crates/papers-openalex/src/: cache.rs  client.rs  error.rs  lib.rs  params.rs  response.rs
crates/papers-openalex/src/types/: author.rs  common.rs  funder.rs  institution.rs  mod.rs
crates/papers-openalex/tests/: integration.rs
crates/papers-openalex/tests/fixtures/: author.json  institution.json  publisher.json  source.json  work.json
crates/papers-zotero/: AGENTS.md  CLAUDE.md  Cargo.toml  api-spec.toml  db-schema.md
crates/papers-zotero/src/: cache.rs  client.rs  error.rs  lib.rs  params.rs  response.rs
crates/papers-zotero/src/types/: collection.rs  common.rs  deleted.rs  fulltext.rs  group.rs  item.rs  mod.rs  search.rs  settings.rs  tag.rs  write.rs
crates/papers-zotero/tests/: integration.rs
crates/papers-zotero/tests/fixtures/: attachment.json  collection.json  item.json  tag.json
crates/papers/src/: api.rs  filter.rs  lib.rs  summary.rs
crates/papers/tests/: api.rs  filter.rs
examples/: semantic_search.rs
openalex/: AGENTS.md  Cargo.toml  README.md
openalex/src/: client.rs  error.rs  lib.rs  params.rs  response.rs
openalex/src/types/: author.rs  common.rs  funder.rs  institution.rs  publisher.rs  source.rs  topic.rs  work.rs
openalex/tests/: integration.rs
openalex/tests/fixtures/: funder.json  topic.json
papers-mcp/: Cargo.toml
scripts/: zotero-write.ps1  zotero.ps1
