[workspace]
members = ["papers-mcp", "openalex"]
resolver = "3"

[workspace.dependencies]
bon = "3"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
