[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
bon = "3"
clap = { version = "4", features = ["derive", "wrap_help"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
