[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Matt George"]
description = "CLI and MCP server for searching academic research and papers via OpenAlex"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mmgeorge/papers"

[workspace.dependencies]
papers-openalex = { path = "crates/papers-openalex", version = "0.1.1" }
papers-core = { path = "crates/papers-core", version = "0.1.1" }
dirs = "6"
bon = "3"
clap = { version = "4", features = ["derive", "wrap_help"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
