[package]
name = "papers-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for searching academic research via OpenAlex"
license.workspace = true
repository.workspace = true

[[bin]]
name = "papers"
path = "src/main.rs"

[dependencies]
papers-core.workspace = true
papers-zotero.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
