[package]
name = "papers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
papers-openalex.workspace = true
papers-zotero.workspace = true
papers-datalab.workspace = true
dirs.workspace = true
reqwest.workspace = true
pdf-extract.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
