[package]
name = "papers-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
openalex = { path = "../openalex" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
