[package]
name = "papers-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "MCP server for searching academic research via OpenAlex"
license.workspace = true
repository.workspace = true

[dependencies]
papers-core.workspace = true
papers-zotero.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
