[package]
name = "papers-zotero"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust client for the Zotero personal research library API"
license.workspace = true
repository.workspace = true

[dependencies]
bon.workspace = true
md-5.workspace = true
dirs.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
dirs.workspace = true
serial_test.workspace = true
tokio.workspace = true
wiremock.workspace = true
